WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53511
AX: AXPosition of AXScrollArea is wrong
https://bugs.webkit.org/show_bug.cgi?id=53511
Summary
AX: AXPosition of AXScrollArea is wrong
chris fleizach
Reported
2011-02-01 10:38:02 PST
In WK1, the AXPosition being reported for scroll areas is wrong
Attachments
Patch
(7.49 KB, patch)
2011-02-01 11:15 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-02-01 11:14:49 PST
rdar://8883035
chris fleizach
Comment 2
2011-02-01 11:15:53 PST
Created
attachment 80792
[details]
Patch
chris fleizach
Comment 3
2011-02-01 14:38:41 PST
http://trac.webkit.org/changeset/77308
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug