AX: AXPosition of AXScrollArea is wrong https://bugs.webkit.org/show_bug.cgi?id=53511

Reviewed by Darin Adler.

Source/WebCore:

AccessibilityScrollView needed to return a valid documentFrameView() object.
At the same time, the code from document() should be consolidated in
AccessibilityObject, so all objects can use it.

Test: platform/mac/accessibility/webkit-scrollarea-position.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::document):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::accessibilityHitTest):
(WebCore::AccessibilityScrollView::documentFrameView):
* accessibility/AccessibilityScrollView.h:

LayoutTests:

* platform/mac/accessibility/webkit-scrollarea-position-expected.txt: Added.
* platform/mac/accessibility/webkit-scrollarea-position.html: Added.



Canonical link: https://commits.webkit.org/67407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77308 268f45cc-cd09-0410-ab3c-d52691b4dbfc